--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-plugin-import": "^1.13.0",
     "core-js": "^3.6.5",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
+    "vant": "^2.9.2",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4"
   },
